<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/my_account"
                android:textColor="@color/white_color"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="User Info"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_fieldset"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:contentDescription="@string/image"
                    android:src="@drawable/user_icon" />

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@null"
                    android:drawableLeft="@drawable/divider"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/divider"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                   >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_fieldset"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:contentDescription="@string/image"
                    android:src="@drawable/user_icon" />

                <EditText
                    android:id="@+id/usernameET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@null"
                    android:drawableLeft="@drawable/divider"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/divider"
                    android:ems="10"
                    android:hint="@string/username"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_fieldset"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:contentDescription="@string/image"
                    android:src="@drawable/lock_icon" />

                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@null"
                    android:drawableLeft="@drawable/divider"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/divider"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                      android:textColorHint="@color/green_color"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_fieldset"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:contentDescription="@string/image"
                    android:src="@drawable/lock_icon" />

                <EditText
                    android:id="@+id/confirmPasswordET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@null"
                    android:drawableLeft="@drawable/divider"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/divider"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                     android:textColorHint="@color/green_color"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_fieldset"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:contentDescription="@string/image"
                    android:src="@drawable/location_icon" />

                <EditText
                    android:id="@+id/zipcodeET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@null"
                    android:drawableLeft="@drawable/divider"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/divider"
                    android:ems="10"
                    android:hint="@string/zip_code"
                    android:inputType="number"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                />
            </LinearLayout>

            
            <!-- ************************************************************************************** -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="Bank Info"
                android:textSize="20dp"
                android:textStyle="bold" />

            <!-- **************** CARD TYPE *************** -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_fieldset"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:contentDescription="@string/image"
                    android:src="@drawable/card_icon" />

                <EditText
                    android:id="@+id/card_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@null"
                    android:drawableLeft="@drawable/divider"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/divider"
                    android:ems="10"
                    android:hint="Card Type"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:enabled="false"
                    android:editable="false"/>
            </LinearLayout>

            <!-- ****************NAME ON CARD ************* -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_fieldset"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:contentDescription="@string/image"
                    android:src="@drawable/card_icon" />

                <EditText
                    android:id="@+id/card_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@null"
                    android:drawableLeft="@drawable/divider"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/divider"
                    android:ems="10"
                    android:hint="Card Name"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                     android:enabled="false"
                    android:editable="false"
                 />
            </LinearLayout>

            <!-- *************** CAED NUMBER **************** -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_fieldset"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:contentDescription="@string/image"
                    android:src="@drawable/card_icon" />

                <EditText
                    android:id="@+id/card_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@null"
                    android:drawableLeft="@drawable/divider"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/divider"
                    android:ems="10"
                    android:hint="Card Number"
                    android:inputType="number"
                    android:paddingRight="5dp"
                    android:maxLength="16"
                    android:singleLine="true"
                      android:enabled="false"
                    android:editable="false"/>
            </LinearLayout>

            <!-- ************* EXPIRY DATE **************** -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_fieldset"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10" >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:contentDescription="@string/image"
                    android:src="@drawable/card_icon" />

                <EditText
                    android:id="@+id/expiry_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@null"
                    android:drawableLeft="@drawable/divider"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/divider"
                    android:ems="10"
                    android:hint="Expiry Date"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                   android:enabled="false"
                    android:editable="false" />
            </LinearLayout>

            <!-- ******************************************** -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/text_fieldset"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10" >

                <Button
                    android:id="@+id/submitBT"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:background="@drawable/rounded_green_box"
                    android:drawableLeft="@drawable/divider"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/divider"
                    android:text="@string/submit"
                    android:textColor="@color/white_color"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>