<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="User Info"
            android:textSize="20dp"
            android:textStyle="bold" />
        
          <ImageView 
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/change_profile"/>
    
    </RelativeLayout>

        <!-- ******** firstname *************** -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_fieldset"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:contentDescription="@string/image"
                android:src="@drawable/user_icon" />

            <EditText
                android:id="@+id/firstnameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@null"
                android:drawableLeft="@drawable/divider"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/divider"
                android:ems="10"
                android:hint="Firstname"
                android:paddingRight="5dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <!-- ********** lastname ***************** -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_fieldset"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:contentDescription="@string/image"
                android:src="@drawable/user_icon" />

            <EditText
                android:id="@+id/lastnameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@null"
                android:drawableLeft="@drawable/divider"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/divider"
                android:ems="10"
                android:hint="Lastname"
                android:paddingRight="5dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </LinearLayout>
        
        
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_fieldset"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:contentDescription="@string/image"
                android:src="@drawable/user_icon" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@null"
                android:drawableLeft="@drawable/divider"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/divider"
                android:ems="10"
                android:hint="Email"
                android:paddingRight="5dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_fieldset"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:contentDescription="@string/image"
                android:src="@drawable/user_icon" />

            <EditText
                android:id="@+id/usernameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@null"
                android:drawableLeft="@drawable/divider"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/divider"
                android:ems="10"
                android:hint="@string/username"
                android:paddingRight="5dp"
                android:singleLine="true" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_fieldset"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:contentDescription="@string/image"
                android:src="@drawable/lock_icon" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@null"
                android:drawableLeft="@drawable/divider"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/divider"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColorHint="@color/green_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_fieldset"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:contentDescription="@string/image"
                android:src="@drawable/lock_icon" />

            <EditText
                android:id="@+id/confirmPasswordET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@null"
                android:drawableLeft="@drawable/divider"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/divider"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColorHint="@color/green_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_fieldset"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:contentDescription="@string/image"
                android:src="@drawable/location_icon" />

            <EditText
                android:id="@+id/zipcodeET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@null"
                android:drawableLeft="@drawable/divider"
                android:drawablePadding="15dp"
                android:drawableStart="@drawable/divider"
                android:ems="10"
                android:hint="@string/zip_code"
                android:inputType="number"
                android:paddingRight="5dp"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>